mytc create function validateRepairHistory